# worker-master

./: .gitignore  .pre-commit-config.yaml  README.md  dependencies.py  main.py  pyproject.toml
config/: __init__.py  database.py
models/: tasks.py
routes/: __init__.py  tasks.py
services/: __init__.py  tasks.py
tests/: test_tasks.py
