[project]
name = "worker-master"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.126.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pre-commit>=4.5.1",
]
